# cosmos-paper-script

./: README.md  pyproject.toml
data/kir21/: kir21_effect_abundance_surface2.csv  kir21_effect_surface_function.csv
data/kras/: kras_effect_abundance_binding_RAF1_RBD.csv
data/psd95/: psd95_effect_abundance_binding.csv
notebook/: 00_build.ipynb  01_global_heatmap.ipynb  01_global_scatter.ipynb  01_single_position.ipynb  02_best_models.ipynb  02_single_position.ipynb  03_best_models.ipynb  04-1_simulation_noise.ipynb  04-2_simulation_analysis.ipynb  04_simulation_noise.py
