[project]
name = "cosmos-paper-script"
version = "0.1.0"
description = "Scripts to replicate the analyses in \"Cosmos: A Position-Resolution  Causal Model for Direct and Indirect Effects in Protein Functions\""
authors = [
    { name = "Jingyou Rao", email = "roseraosh@gmail.com" },
    { name = "Mingsen Wang", email = "mingsen.wang.sh@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1"
pandas = "^2.2"
xarray = ">=2024.09"
scipy = "^1.14"
scikit-learn = "^1.4"
arviz = "^0.20"

cosmos-dms = { path = "../cosmos", develop = true }

[tool.poetry.group.plot.dependencies]
matplotlib = ">=3.9"
seaborn = ">=0.13"
adjustText = ">=1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"
ipywidgets = ">=8.1"
black = ">=25"
isort = ">=6"
pylint = ">=3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
